--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -35,7 +35,7 @@ th, td {
 
 .Nav a.active {
     overflow: hidden;
-    /*background-color: #04AA6D;*/
+    background-color: #003d76;
     color: white;
 }
 
