--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -14,11 +14,15 @@ th, td {
     background-color: #ffffff;
     outline-style: auto;
     outline-color: #111111;
+    collapseonselect: false;
+
 }
 
 .Nav a {
     float: left;
     color: #000000;
+
+
 
 }
 .Nav a.nav-icon {
@@ -35,6 +39,15 @@ th, td {
     text-decoration: none;
     font: inherit;
     font-size: 18px;
+}
+
+.Nav a.collapsible {
+    collapse: true;
+    justify-content: center;
+    text-align: center;
+    padding: 30px 20px;
+    text-decoration: none;
+
 }
 
 .Nav a:hover {
