--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -4,4 +4,8 @@
     justify-content: space-between;
     margin: 30px;
     container-type: normal;
+    align-items: center;
+    image-size: 80%;
+    image-position: center;
+
 }
