--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -2,10 +2,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 30px;
+    margin: 60px;
     container-type: normal;
     align-items: center;
     image-size: 80%;
-    image-position: center;
+    padding: 30px;
+
 
 }
