--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,3 +1,11 @@
-.jumbotron{
-    margin: 20px;
+.card_container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 30px;
+    container-type: normal;
+    align-items: center;
+    image-size: 80%;
+    padding: 30px;
+
 }
